Create flight details view

--- a/sample_app/src/styles/_variables.sass
+++ b/sample_app/src/styles/_variables.sass
@@ -1,3 +1,39 @@
-$background-color: #d7d7d7
+$page-max-width: 1440px
+$page-min-width: 960px
 
+$brand-color-1: #0f1112
+$brand-color-2: #666666
+$brand-color-3: #ccac5b
+$brand-color-4: #22272b
+$brand-color-5: #a7a9ac
+$brand-color-6: #ffffff
+
+$background-color: #d7d7d7
 $header-font-color: #0f0f0f
+
+// TYPOGRAPHY
+$link-style-1-color: $brand-color-3
+$link-style-2-color: $brand-color-5
+
+// BUTTONS
+$button-style-1-color: $brand-color-6
+
+// FOOTER
+$footer-background: $brand-color-4
+$footer-text-color: $brand-color-2
+$footer-link-color: $brand-color-5
+
+// FLIGHT DETAILS
+$details-header-background: $brand-color-1
+$details-background: $brand-color-6
+
+$details-controls-background: $brand-color-2
+$details-controls-color: $brand-color-6
+
+$details-summary-date-color: $brand-color-5
+
+// METRICS
+$metrics-header-color: $brand-color-3
+$metrics-header-border-color: $brand-color-3
+$metrics-column-border-color: $brand-color-5
+$metrics-label-color: $brand-color-5
